--- a/template.tex
+++ b/template.tex
@@ -7,6 +7,13 @@
 \author{ちょしゃ}
 \maketitle
 
-Hello \\
+\tableofcontents
+
+\section{せくしょん}
+Hello
+\subsection{さぶせくしょん}
+,
+\subsubsection{さぶさぶせくしょん}
+World!
 
 \end{document}
