fix document class
ujarticle causes error

--- a/template.tex
+++ b/template.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,titlepage]{ujarticle}
+\documentclass[11pt,a4paper,titlepage]{jarticle}
 \usepackage[utf8]{inputenc}
 \usepackage{pxfonts}
 \begin{document}
