add coffee stain

--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,10 @@
-\documentclass[11pt,a4paper,titlepage]{jarticle}
+\documentclass[11pt,a4paper,titlepage,dvipdfmx]{jarticle}
 \usepackage[utf8]{inputenc}
 \usepackage{pxfonts}
+\usepackage{tikz}
+\usepackage{verbatim}
+\usepackage{pxpgfmark}
+\usepackage{coffee4}
 \begin{document}
 
 \title{タイトル}
@@ -12,6 +16,7 @@
 \newpage
 \pagenumbering{arabic}
 
+\cofeAm{1}{1.0}{0}{5.5cm}{3cm}
 \section{せくしょん}
 Hello
 \subsection{さぶせくしょん}
